<resources>
    <string name="app_name">[nouf alobaidi]-Midterm20</string>
    <string name="todo">TODO</string>
    <string name="go_to_activity_1">go to activity 1</string>
    <string name="go_to_activity__2">go to activity 2</string>
    <string name="go_to_activity1">go to activity1</string>
    <string name="go_to_activity_3">go to activity 3</string>
    <string name="go_to_acticity_3">go to acticity 3</string>
    <string name="go_to_activity_2">go to activity 2</string>
    <string name="activity_1">Activity 1</string>
    <string name="activity_3">Activity 3</string>
    <string name="activity_2">Activity 2</string>
    <string name="todoo">TODO</string>
</resources>